Point out that it updates first

--- a/README
+++ b/README
@@ -27,8 +27,9 @@ DESCRIPTION
     It works by having a backend running CPAN::Mini::Live::Publish which
     publishes file updates and deletions to FriendFeed.
 
-    CPAN::Mini::Live listens to these updates using the FriendFeed real-time
-    API so your minicpan will be kept up to date in real time.
+    CPAN::Mini::Live first make sures it is up to date and then listens to
+    these updates using the FriendFeed real-time API so your minicpan will
+    be kept up to date in real time.
 
     You have to use the same mirror as the backend code,
     <http://cpan.cpantesters.org/>.
